@@ -11,6 +11,7 @@ import org.mockito.Mockito;
 import com.reactivo.onclass.app.on_class_reactivo.domain.model.Capability;
 import com.reactivo.onclass.app.on_class_reactivo.domain.model.Technology;
 import com.reactivo.onclass.app.on_class_reactivo.domain.repository.CapabilityRepository;
+import com.reactivo.onclass.app.on_class_reactivo.domain.repository.TechnologyRepository;
 
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
@@ -18,33 +19,31 @@ import reactor.test.StepVerifier;
 
 class CapabilityUseCaseTest {
 
+    private TechnologyRepository technologyRepository;
     private CapabilityRepository repository;
     private CapabilityUseCase useCase;
 
     @BeforeEach
     void setUp() {
         repository = Mockito.mock(CapabilityRepository.class);
-        useCase = new CapabilityUseCase(repository);
+        technologyRepository = Mockito.mock(TechnologyRepository.class);
+        useCase = new CapabilityUseCase(repository, technologyRepository);
     }
 
     @Test
     void createCapability_shouldSaveWhenValid() {
         // given
-        var techs = List.of(
-                new Technology(null, "Java", "Lenguaje backend"),
-                new Technology(null, "Spring Boot", "Framework reactivo"),
-                new Technology(null, "MongoDB", "Base de datos NoSQL"));
+        var ids = List.of("1", "2", "3");
 
         var capability = Capability.builder()
                 .nombre("Backend avanzado")
                 .descripcion("Capacidad con tecnologías backend")
-                .tecnologias(techs)
+                .technologyIds(ids)
                 .build();
 
         Mockito.when(repository.existsByNombre("Backend avanzado")).thenReturn(Mono.just(false));
         Mockito.when(repository.save(capability)).thenReturn(Mono.just(capability));
 
-        // when / then
         StepVerifier.create(useCase.createCapability(capability))
                 .expectNext(capability)
                 .verifyComplete();
@@ -55,14 +54,12 @@ class CapabilityUseCaseTest {
 
     @Test
     void createCapability_shouldFailWhenLessThan3Technologies() {
-        var techs = List.of(
-                new Technology(null, "Java", "Lenguaje backend"),
-                new Technology(null, "Spring Boot", "Framework reactivo"));
+        var ids = List.of("1", "2");
 
         var capability = Capability.builder()
                 .nombre("Backend intermedio")
                 .descripcion("Capacidad con pocas tecnologías")
-                .tecnologias(techs)
+                .technologyIds(ids)
                 .build();
 
         StepVerifier.create(useCase.createCapability(capability))
@@ -76,14 +73,14 @@ class CapabilityUseCaseTest {
 
     @Test
     void createCapability_shouldFailWhenMoreThan20Technologies() {
-        var techs = IntStream.range(0, 21)
-                .mapToObj(i -> new Technology(null, "Tech" + i, "Desc" + i))
-                .collect(Collectors.toList());
+        var ids = IntStream.range(0, 21)
+                .mapToObj(String::valueOf)
+                .toList();
 
         var capability = Capability.builder()
                 .nombre("Capacidad enorme")
                 .descripcion("Demasiadas tecnologías")
-                .tecnologias(techs)
+                .technologyIds(ids)
                 .build();
 
         StepVerifier.create(useCase.createCapability(capability))
@@ -97,15 +94,12 @@ class CapabilityUseCaseTest {
 
     @Test
     void createCapability_shouldFailWhenDuplicateTechnologies() {
-        var techs = List.of(
-                new Technology(null, "Java", "Lenguaje backend"),
-                new Technology(null, "Spring Boot", "Framework reactivo"),
-                new Technology(null, "Java", "Lenguaje duplicado"));
+        var ids = List.of("1", "2", "1");
 
         var capability = Capability.builder()
                 .nombre("Backend duplicado")
                 .descripcion("Tiene tecnologías repetidas")
-                .tecnologias(techs)
+                .technologyIds(ids)
                 .build();
 
         StepVerifier.create(useCase.createCapability(capability))
@@ -118,18 +112,16 @@ class CapabilityUseCaseTest {
 
     @Test
     void createCapability_shouldFailWhenNameAlreadyExists() {
-        var techs = List.of(
-                new Technology(null, "Java", "Lenguaje backend"),
-                new Technology(null, "Spring Boot", "Framework reactivo"),
-                new Technology(null, "MongoDB", "Base de datos NoSQL"));
+        var ids = List.of("1", "2", "3");
 
         var capability = Capability.builder()
                 .nombre("Backend avanzado")
                 .descripcion("Capacidad duplicada")
-                .tecnologias(techs)
+                .technologyIds(ids)
                 .build();
 
-        Mockito.when(repository.existsByNombre("Backend avanzado")).thenReturn(Mono.just(true));
+        Mockito.when(repository.existsByNombre("Backend avanzado"))
+                .thenReturn(Mono.just(true));
 
         StepVerifier.create(useCase.createCapability(capability))
                 .expectErrorMatches(error -> error instanceof IllegalArgumentException &&
@@ -142,27 +134,27 @@ class CapabilityUseCaseTest {
 
     @Test
     void getAllCapabilities_shouldReturnFluxOfCapabilities() {
-        var cap1 = new Capability("1", "Backend", "Capacidad backend", List.of());
-        var cap2 = new Capability("2", "Frontend", "Capacidad frontend", List.of());
+        var cap1 = new Capability("1", "Backend", "Capacidad backend", List.of(), List.of());
+        var cap2 = new Capability("2", "Frontend", "Capacidad frontend", List.of(), List.of());
 
         Mockito.when(repository.findAll()).thenReturn(Flux.just(cap1, cap2));
+        Mockito.when(technologyRepository.findById(Mockito.anyString()))
+                .thenReturn(Mono.empty()); // no tecnologías
 
-        StepVerifier.create(useCase.getAllCapabilities())
-                .expectNext(cap1)
-                .expectNext(cap2)
+        StepVerifier.create(useCase.getAllCapabilities("nombre", "asc", 0, 10))
+                .expectNextCount(2)
                 .verifyComplete();
-
-        Mockito.verify(repository).findAll();
     }
 
     @Test
     void getAllCapabilities_shouldSortByNameAscending() {
         var cap1 = Capability.builder()
-                .id("1").nombre("Backend").tecnologias(List.of()).build();
+                .id("1").nombre("Backend").technologyIds(List.of()).build();
         var cap2 = Capability.builder()
-                .id("2").nombre("Frontend").tecnologias(List.of()).build();
+                .id("2").nombre("Frontend").technologyIds(List.of()).build();
 
         Mockito.when(repository.findAll()).thenReturn(Flux.just(cap2, cap1));
+        Mockito.when(technologyRepository.findById(Mockito.anyString())).thenReturn(Mono.empty());
 
         StepVerifier.create(useCase.getAllCapabilities("nombre", "asc", 0, 10))
                 .expectNextMatches(cap -> cap.getNombre().equals("Backend"))
@@ -173,17 +165,12 @@ class CapabilityUseCaseTest {
     @Test
     void getAllCapabilities_shouldSortByTechCountDescending() {
         var cap1 = Capability.builder()
-                .id("1").nombre("A").tecnologias(List.of(
-                        new Technology("1", "Java", ""), new Technology("2", "Mongo", "")))
-                .build();
+                .id("1").nombre("A").technologyIds(List.of("1", "2")).build();
         var cap2 = Capability.builder()
-                .id("2").nombre("B").tecnologias(List.of(
-                        new Technology("3", "Spring", ""),
-                        new Technology("4", "JUnit", ""),
-                        new Technology("5", "Docker", "")))
-                .build();
+                .id("2").nombre("B").technologyIds(List.of("3", "4", "5")).build();
 
         Mockito.when(repository.findAll()).thenReturn(Flux.just(cap1, cap2));
+        Mockito.when(technologyRepository.findById(Mockito.anyString())).thenReturn(Mono.empty());
 
         StepVerifier.create(useCase.getAllCapabilities("cantidad", "desc", 0, 10))
                 .expectNextMatches(cap -> cap.getNombre().equals("B"))
@@ -197,10 +184,12 @@ class CapabilityUseCaseTest {
                 .mapToObj(i -> Capability.builder()
                         .id(String.valueOf(i))
                         .nombre("Cap" + i)
-                        .tecnologias(List.of()).build())
+                        .technologyIds(List.of())
+                        .build())
                 .toList();
 
         Mockito.when(repository.findAll()).thenReturn(Flux.fromIterable(caps));
+        Mockito.when(technologyRepository.findById(Mockito.anyString())).thenReturn(Mono.empty());
 
         StepVerifier.create(useCase.getAllCapabilities("nombre", "asc", 1, 2))
                 .expectNextMatches(cap -> cap.getNombre().equals("Cap2"))
